<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewModel.fragments.HomeFragment"
    android:background="@color/light_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/gothamssm_bold"
            android:text="@string/app_name"
            android:textColor="@color/strong"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corners_dark_gray"
            android:layoutDirection="rtl"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search_hint" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_houses"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/iv_search_empty"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/image_search_state_empty"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_houses"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_search_empty_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:fontFamily="@font/gothamssm_book"
            android:textColor="@color/medium"
            android:textSize="12sp"
            android:text="@string/search_empty_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_search_empty" />

        <TextView
            android:id="@+id/tv_search_empty_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:textAlignment="center"
            android:fontFamily="@font/gothamssm_book"
            android:textColor="@color/medium"
            android:textSize="12sp"
            android:text="@string/search_empty_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_empty_1" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

