<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="104dp">

    <View
        android:id="@+id/v_body"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corners_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_image_house"
        android:layout_width="64dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:visibility="visible"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toStartOf="@+id/v_body"
        app:layout_constraintTop_toTopOf="@+id/v_body">

        <ImageView
            android:id="@+id/iv_house"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_house_image"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/gothamssm_bold"
        android:text="@string/default_price"
        android:textColor="@color/strong"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/cv_image_house"
        app:layout_constraintTop_toTopOf="@+id/cv_image_house" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/gothamssm_bold"
        android:text="@string/default_address"
        android:textColor="@color/medium"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/cv_image_house"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/iv_bed"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_bed"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/cv_image_house"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamssm_book"
        android:text="@string/default_number"
        android:textSize="11sp"
        android:textColor="@color/medium"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/iv_bed" />

    <ImageView
        android:id="@+id/iv_bath"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_bath"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/tv_bed"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_bath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamssm_book"
        android:text="@string/default_number"
        android:textSize="11sp"
        android:textColor="@color/medium"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/iv_bath" />

    <ImageView
        android:id="@+id/iv_layers"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_layers"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/tv_bath"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_layers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamssm_book"
        android:text="@string/default_number"
        android:textSize="11sp"
        android:textColor="@color/medium"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/iv_layers" />

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/tv_layers"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothamssm_book"
        android:textSize="11sp"
        android:textColor="@color/medium"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toBottomOf="@+id/v_body"
        app:layout_constraintStart_toEndOf="@+id/iv_location" />


</androidx.constraintlayout.widget.ConstraintLayout>